@@ -2,13 +2,15 @@
 install-scripts = /usr/bin
 install-lib = /usr/lib/python2.7/site-packages
 [bdist_rpm]
-release = 4
+release = 1
 packager = huihuix.zhang@intel.com
 requires = python
 pre_install = preinstall
 install_script = fakeinstall
 post_install = postinstall
-changelog = * Tue Sep 29 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.4-4
+changelog = * Tue Oct 10 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.5-1
+  - add BLOCK logic for webapi's result
+ Tue Sep 29 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.4-4
   - update pdf files
  Tue Sep 28 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.4-3
   - add Known Issues section in README
