@@ -1,3 +1,5 @@
+ Tue Oct 10 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.5-1
+  - add BLOCK logic for webapi's result
  Tue Sep 29 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.4-4
   - update pdf files
  Tue Sep 28 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.4-3
